update  to include the necessary environement variables for Google and 42 OAuth credentials

--- a/devops/.env.example
+++ b/devops/.env.example
@@ -1,5 +1,20 @@
+# Credentials for PostgreSQL
 POSTGRES_HOST='your postgres host'
 POSTGRES_PORT='your postgres port'
 POSTGRES_DB='your postgres db'
 POSTGRES_USER='your postgres user'
 POSTGRES_PASSWORD='your postgres password'
+
+# Credentials for Google OAuth
+GOOGLE_CLIENT_ID='your google client id'
+GOOGLE_CLIENT_SECRET='your google client secret'
+GOOGLE_REDIRECT_URI='your google redirect uri'
+GOOGLE_AUTH_URI='your google auth uri'
+GOOGLE_TOKEN_URI='your google token uri'
+
+# Credentials for 42 OAuth Intra
+CLIENT_42_ID='your 42 client id'
+CLIENT_42_SECRET='your 42 client secret'
+REDIRECT_42_URI='your 42 redirect uri'
+AUTH_42_URI='your 42 auth uri'
+TOKEN_42_URI='your 42 token uri'
