--- a/devops/nginx/nginx.conf
+++ b/devops/nginx/nginx.conf
@@ -1,9 +1,11 @@
 server {
-    listen 80;
+    listen 8081;
+
+    client_max_body_size 5M;
 
     location /api/ {
         proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
+        proxy_set_header Host $host:8081;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -11,7 +13,7 @@ server {
 
     location /media/ {
         proxy_pass http://backend:8000/media/;
-        proxy_set_header Host $host;
+        proxy_set_header Host $host:8081;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -19,7 +21,7 @@ server {
 
     location /static/ {
         proxy_pass http://backend:8000/static/;
-        proxy_set_header Host $host;
+        proxy_set_header Host $host:8081;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
