Create a custom django admin command 'cleanup_conversations' that deletes invisible conversation from both users and setup cron to periodically execute the command at midnight

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,8 +5,14 @@ WORKDIR /app
 COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
-RUN apt-get update && apt-get install -y postgresql-client && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y \
+    postgresql-client \
+    cron \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY . .
+
+# Create log directories
+RUN mkdir -p /var/log/cron /var/log/gunicorn
 
 CMD ["sh", "config/start_backend.sh"]
