--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -6,14 +6,33 @@ services:
     restart: always
     env_file:
       - .env
+    command: ["sh", "config/start_backend.sh"]
     expose:
       - "8000"
     depends_on:
       - postgres
+      - redis
     volumes:
       - ../backend:/app
       - ../backend/logs:/var/log/gunicorn
       - ../backend/logs:/var/log/cron
+
+  websocket:
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+    restart: always
+    env_file:
+      - .env
+    command: ["sh", "config/start_daphne.sh"]
+    expose:
+      - "8001"
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - ../backend:/app
+      - ../backend/logs:/var/log/daphne
 
   postgres:
     image: postgres:latest
@@ -24,7 +43,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
-  
+
   web:
     build:
       context: ./nginx
@@ -36,7 +55,12 @@ services:
       - ./nginx:/etc/nginx/conf.d
     depends_on:
       - backend
-    
+  
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres-data:
