--- a/devops/nginx/nginx.conf
+++ b/devops/nginx/nginx.conf
@@ -11,6 +11,17 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    location /ws/ {
+        proxy_pass http://websocket:8001;
+        proxy_set_header Host $host:8081;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_http_version 1.1;
+    }
+
     location /media/ {
         proxy_pass http://backend:8000/media/;
         proxy_set_header Host $host:8081;
